--- a/android/plant_tracker/app/src/main/res/values/strings.xml
+++ b/android/plant_tracker/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="menu">Menu</string>
     <string name="go_back">Go Back</string>
     <string name="more_options">More Options</string>
+    <string name="add_plant">Add Plant</string>
 </resources>
