--- a/android/plant_tracker/app/src/main/res/values/strings.xml
+++ b/android/plant_tracker/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="go_back">Go Back</string>
     <string name="more_options">More Options</string>
     <string name="add_plant">Add Plant</string>
+    <string name="plant_name_input_label">Plant Name</string>
 </resources>
