--- a/android/plant_tracker/app/src/main/res/values/strings.xml
+++ b/android/plant_tracker/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="add_plant">Add Plant</string>
     <string name="plant_name_input_label">Plant Name</string>
     <string name="plant_image_description">Image of the plant.</string>
+    <string name="select_image">Select Image</string>
 </resources>
