--- a/android/plant_tracker/app/src/main/res/values/strings.xml
+++ b/android/plant_tracker/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="plant_name_input_label">Plant Name</string>
     <string name="plant_image_description">Image of the plant.</string>
     <string name="select_image">Select Image</string>
+    <string name="connection_error">Connection failed \nswipe down to try again</string>
 </resources>
