--- a/android/plant_tracker/app/src/main/res/values/strings.xml
+++ b/android/plant_tracker/app/src/main/res/values/strings.xml
@@ -8,9 +8,7 @@
     <string name="plant_name_input_label">Plant Name</string>
     <string name="plant_image_description">Image of the plant.</string>
     <string name="select_image">Select Image</string>
-<<<<<<< HEAD
     <string name="connection_error">Connection failed \nswipe down to try again</string>
-=======
     <string name="select_pi_hint">Select Pi</string>
->>>>>>> 3b29735 (Initial pi dropdown setup for add plant.)
+    <string name="select_device_hint">Select Device</string>
 </resources>
